passed all tests but need to adjust css and add content

--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <link rel="stylesheet" href="css/styles.css">
 
   <title>Tribute Page</title>
 </head>
   <body>
+    <main id="main">
+      <h1 id="title">Mr. lorem ipsum dipsum</h1>
+      <p>the lorem de sorem the morem</p>
+      <figure id="img-div">
+        <img id="image" src="https://via.placeholder.com/950x525" alt="">
+        <figcaption id="img-caption">
+          Dui id ornare arcu odio ut sem nulla. In tellus integer feugiat scelerisque. 
+          Convallis tellus id interdum velit laoreet id donec ultrices tincidunt. 
+          Dui nunc mattis enim ut tellus elementum sagittis vitae et. 
+        </figcaption>
+      </figure>
+      <section id="tribute-info">
 
-  <h2>This is my First website and i am Super excited to build it!!</h2>
 
-  <p style="text-align: center;">By default, the background image will.</p>
+
+        <a id="tribute-link" href="" target="_blank">Wikipedia entry</a>
+      </section>
+
+
+
+
+    </main>
+    
 
 
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
